// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Animation Animation should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnylx bRGPdV"
  >
    Animation
  </div>
</DocumentFragment>
`;

exports[`Modal Modal should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnylx cTdjxE"
  >
    <div
      class="sc-dlnjPT hgfUpP"
    />
    <div
      class="sc-hKFyIo ePWOzL"
      width="40rem"
    />
  </div>
</DocumentFragment>
`;

exports[`Modal Modal should render correctly with others props 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnylx cTdjxE"
  >
    <div
      class="sc-dlnjPT hgfUpP"
    />
    <div
      class="sc-hKFyIo ePWOzL"
      width="40rem"
    >
      <header
        class="sc-eCApGN hYhSt"
      >
        <h3>
          Modal Test File
        </h3>
      </header>
      <div
        class="sc-gtssRu gIbjpE"
        data-testid="close-modal"
      />
      <div
        class="sc-jSFkmK jdyFSc"
      >
        <div>
          content
        </div>
      </div>
      <footer
        class="sc-gKAblj bFFacn"
      >
        <div>
          footer
        </div>
      </footer>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ModalFooter ModalFooter should render correctly 1`] = `
<DocumentFragment>
  <footer
    class="sc-gKAblj fyPVfg"
  >
    Modal
  </footer>
</DocumentFragment>
`;
